fix: spacing on mobile #7

--- a/static/style.css
+++ b/static/style.css
@@ -4,9 +4,9 @@ h1, h2, h3, h4, h5, h6, p, button, .link-tag {
 	color: #afa4a4;
 	font-size: large;
 
-	@media (min-width: 320px) {
+	/* @media (min-width: 320px) {
 		font-size: 1.15rem;
-	}
+	} */
 	/* @media (min-width: 480px) {
 		font-size: large;
 	} */
